Compilador_v1/analizador_lexico/gramatica.ebnf
program ::= class_decl+  // Un programa consiste en una o más declaraciones

class_access ::= 'public class'
                |'class'

class_decl ::= class_access class_name '{' class_body '}'  // Definición de una clase

IDENT ::= [a-zA-Z_][a-zA-Z0-9_]*  // Identificadores

class_name ::= IDENT

class_body ::= (var_decl | func_decl)*

access_specifier ::= 'public'
                | 'private'
                | 'protected'

var_decl ::= access_specifier? type_spec IDENT ';'
        | access_specifier? type_spec IDENT '[' ']' ';'

type_spec ::= 'void'           // Tipo vacío, sin valor
            | 'bool'           // Tipo booleano (true o false)
            | 'int'            // Tipo entero
            | 'float'          // Tipo de punto flotante
            | 'string'         // Tipo cadena (de caracteres)
            | IDENT             // Para tipos definidos por el usuario (clases, structs)

func_decl ::= access_specifier type_spec IDENT '(' params ')' compound_stmt
    // Declaración de funciones con tipo de retorno, nombre, parámetros, y cuerpo

params ::= param_list        // Lista de parámetros
        | 'void'             // O ausencia de parámetros

param_list ::= param (',' param)*  // Lista de parámetros separados por comas

param ::= type_spec IDENT
    | type_spec IDENT '[' ']'

compound_stmt ::= '{' local_decls stmt_list '}'

local_decls ::= local_decl*  // Declaraciones locales dentro de un bloque de código

local_decl ::= type_spec IDENT ';'
            | type_spec IDENT '[' ']' ';'

stmt_list ::= stmt*  // Lista de sentencias dentro de un bloque de código

stmt ::= expr_stmt         // Sentencia de expresión
      | compound_stmt      // Sentencia compuesta
      | if_stmt            // Sentencia condicional
      | while_stmt         // Sentencia de bucle
      | return_stmt        // Sentencia de retorno
      | break_stmt         // Sentencia de interrupción del bucle

expr_stmt ::= expr? ';'  // Sentencia de expresión opcionalmente seguida de un punto y coma

if_stmt ::= 'if' '(' expr ')' stmt ('else' stmt)?
while_stmt ::= 'while' '(' expr ')' stmt
return_stmt ::= 'return' expr? ';'
break_stmt ::= ('break' | 'continue') ';'

expr ::= IDENT '=' expr
    | IDENT '[' expr ']' '=' expr
    | expr 'or' expr
    | expr 'and' expr
    | expr '==' expr
    | expr '!=' expr
    | expr '+' expr
    | expr '-' expr
    | expr '*' expr
    | expr '/' expr
    | expr '%' expr
    | '(' expr ')'
    | IDENT
    | IDENT '[' expr ']'
    | IDENT '(' args ')'
    | IDENT '.' IDENT
    | BOOL_LIT
    | INT_LIT
    | FLOAT_LIT
    | 'new' type_spec '[' expr ']'

this_assign_stmt ::= 'this' '.' IDENT '=' IDENT ';'
    // Asignación en el constructor usando `this` para referirse al objeto actual
args ::= arg_list?  // Lista de argumentos para llamadas a funciones, opcionalmente vacía
arg_list ::= expr (',' expr)*  // Lista de argumentos separados por comas
